syntax = "proto3";

package ia.v1beta1;

option go_package = "api/managementpb/ia;iav1beta1";

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "managementpb/checks.proto";
import "managementpb/ia/param.proto";

// TODO move it to parent directory / package once API is v1-stable

// TemplateSource defines template source.
enum TemplateSource {
  TEMPLATE_SOURCE_INVALID = 0;
  // Template that is shipped with PMM Server releases.
  BUILT_IN = 1;
  // Template that is downloaded from check.percona.com.
  SAAS = 2;
  // Templated loaded from user-suplied file.
  USER_FILE = 3;
  // Templated created via API.
  USER_API = 4;
}

// Template represents Alert Template that is used to create Alert Rule.
message Template {
  // Machine-readable name (ID).
  string name = 1;
  // Short human-readable summary.
  string summary = 2;
  // PromQL query expression with templating parameters.
  string expr = 3;
  // Query templating parameters.
  repeated Param params = 4;
  // Default duration value.
  google.protobuf.Duration for = 5;
  // Severity.
  management.Severity severity = 6;
  // Labels.
  map<string, string> labels = 7;
  // Annotations.
  map<string, string> annotations = 8;
  // Template source. Only templates defined via API can be updated via API.
  TemplateSource source = 9;
}

message ListTemplatesRequest {}

message ListTemplatesResponse {
  repeated Template templates = 1;
}

message CreateTemplateRequest {
  // YAML (or JSON) template file content.
  string yaml = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
}

message CreateTemplateResponse {}

message UpdateTemplateRequest {
  // YAML (or JSON) template file content.
  string yaml = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
}

message UpdateTemplateResponse {}

message DeleteTemplateRequest {
  string name = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
}

message DeleteTemplateResponse {}

// Templates service provides access to Alert Rule Templates.
service Templates {
  // ListTemplates returns a list of all collected Alert Rule Templates.
  rpc ListTemplates(ListTemplatesRequest) returns (ListTemplatesResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Templates/List"
      body: "*"
    };
  }
  // CreateTemplate TODO.
  rpc CreateTemplate(CreateTemplateRequest) returns (CreateTemplateResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Templates/Create"
      body: "*"
    };
  }
  // UpdateTemplate TODO.
  rpc UpdateTemplate(UpdateTemplateRequest) returns (UpdateTemplateResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Templates/Update"
      body: "*"
    };
  }
  // DeleteTemplate TODO.
  rpc DeleteTemplate(DeleteTemplateRequest) returns (DeleteTemplateResponse) {
    option (google.api.http) = {
      post: "/v1/management/ia/Templates/Delete"
      body: "*"
    };
  }
}
